<resources>
    <string name="app_name">ActiveGym</string>
    <string name="create_account">Crea tu Cuenta</string>
    <string name="name_GYM">Nombre del GYM</string>
    <string name="password">Ingresa tu Contraseña</string>
    <string name="email">Ingresa tu Email</string>
    <string name="confirm_your_password">Confirma tu contraseña</string>
    <string name="register">Registrar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Iniciar sesión</string>

    <string name="register_text">
    ¿No tienes una cuenta? <font color="#FF0000"> Regístrate </font>
</string>



</resources>